mgr/dashboard: fix right whitespaced by refresh
(cherry picked from commit 235a478cc8eb4d0890bc05f501254cb2076047c8)

Resolves: rhbz#1744483

--- a/src/pybind/mgr/dashboard/frontend/src/app/shared/components/refresh-selector/refresh-selector.component.scss
+++ b/src/pybind/mgr/dashboard/frontend/src/app/shared/components/refresh-selector/refresh-selector.component.scss
@@ -24,3 +24,7 @@
     width: 10vw;
   }
 }
+
+.row {
+  margin: auto;
+}
